--- a/travelRT/product_details.html
+++ b/travelRT/product_details.html
@@ -309,11 +309,11 @@
         <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
             <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                    <h4>Quick links</h4>
+                    <h4>기업정보</h4>
                     <ul>
-                        <li><a href="#">Image Licensin</a></li>
-                        <li><a href="#">Style Guide</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">기업소개</a></li>
+                        <li><a href="#">레탑피그마</a></li>
+                        <li><a href="#">레탑프랑스</a></li>
                     </ul>
                 </div>
             </div>
@@ -321,11 +321,11 @@
         <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
             <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                    <h4>Shop Category</h4>
+                    <h4>고객문의</h4>
                     <ul>
-                        <li><a href="#">Image Licensin</a></li>
-                        <li><a href="#">Style Guide</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">공지 사항</a></li>
+                        <li><a href="#">Q&A</a></li>
+                        <li><a href="#">몰라</a></li>
                     </ul>
                 </div>
             </div>
@@ -333,11 +333,11 @@
         <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
             <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                    <h4>Pertners</h4>
+                    <h4>파트너</h4>
                     <ul>
-                        <li><a href="#">Image Licensin</a></li>
-                        <li><a href="#">Style Guide</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">박성재</a></li>
+                        <li><a href="#">멋있다</a></li>
+                        <li><a href="#">이쁘다</a></li>
                     </ul>
                 </div>
             </div>
@@ -345,11 +345,11 @@
         <div class="col-xl-2 col-lg-3 col-md-4 col-sm-4">
             <div class="single-footer-caption mb-50">
                 <div class="footer-tittle">
-                    <h4>Get in touch</h4>
+                    <h4>연락하기</h4>
                     <ul>
-                        <li><a href="#">(89) 982-278 356</a></li>
-                        <li><a href="#">demo@colorlib.com</a></li>
-                        <li><a href="#">67/A, Colorlib, Green road, NYC</a></li>
+                        <li><a href="#">010-0000-0000</a></li>
+                        <li><a href="#">박성재@naver.com</a></li>
+                        <li><a href="#">송파구 주민</a></li>
                     </ul>
                 </div>
             </div>
